[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sstcam_pixel_analysis"]

[tool.setuptools.package-data]
sstcam_analysis = ["*.yaml"]

[project]
name = "sstcam-pixel-analysis"
version = "0.2025.12.03"
description = "Analyse SSTCAM lab data with SPE fitting and charge resolution plotting."
dependencies = [
"ctapipe >=0.28.0",
"astropy",
"Jinja2",
"joblib",
"matplotlib",
"numpy",
"pandas",
"plotly",
"PyYAML",
"tqdm"
]
readme = "README.md"

[project.scripts]
sstcam-pixel-analysis = "sstcam_pixel_analysis.cli:main"
